feat: Блокирует скролл страницы с помощью селектора атрибута

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
   background-color: var(--background-primary);
   scrollbar-gutter: stable;
 
-  &:has(dialog) {
+  &:has(dialog[open]) {
     overflow: hidden;
   }
 }
