--- a/style.css
+++ b/style.css
@@ -84,11 +84,15 @@
   --current-color: var(--pomodoro);
   margin: 0;
   font-family: var(--font-primary);
-  font-size: 24px;
+  font-size: 14px;
   line-height: 100%;
   color: var(--text-dark);
   background-color: var(--background-primary);
   scrollbar-gutter: stable;
+
+  @media (max-width: 640px) {
+    font-size: 10px;
+  }
 
   &:has(dialog[open]) {
     overflow: hidden;
@@ -104,14 +108,22 @@
 
 .page__app {
   width: 500px;
+  height: auto;
+
+  @media (max-width: 640px) {
+    width: 320px;
+  }
 }
 
 .pomodoro {
-  height: auto;
   padding: 60px 40px 80px;
   background-color: var(--background-secondary);
   box-shadow: 0 0 30px 0 var(--box-shadow);
   border-radius: 8px;
+
+  @media (max-width: 640px) {
+    padding: 50px 20px 69px;
+  }
 }
 
 .pomodoro__progress,
@@ -141,6 +153,11 @@
   gap: 10px;
   margin: 0;
   margin-bottom: 40px;
+
+  @media (max-width: 640px) {
+    gap: 6px;
+    margin-bottom: 20px;
+  }
 }
 
 .pomodoro__mode-button {
@@ -148,7 +165,7 @@
   padding: 10px;
   font-family: inherit;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 120%;
   font-weight: 600;
   text-transform: uppercase;
   color: var(--background-secondary);
@@ -157,6 +174,10 @@
   box-shadow: 0 0 6px 0 var(--box-shadow);
   cursor: pointer;
   transition: background-color 0.3s linear;
+
+  @media (max-width: 640px) {
+    font-size: 10px;
+  }
 }
 
 .pomodoro__mode-button--pomodoro {
@@ -195,6 +216,10 @@
   justify-content: center;
   gap: 20px;
   margin: 0;
+
+  @media (max-width: 640px) {
+    gap: 6px;
+  }
 }
 
 .button {
@@ -217,6 +242,10 @@
   padding: 15px 20px;
   background-color: var(--background-secondary);
 
+  @media (max-width: 640px) {
+    padding: 20px 13px;
+  }
+
   &::before {
     content: "";
     width: 40px;
@@ -230,6 +259,13 @@
   &:focus,
   &:active {
     background-color: var(--current-color);
+  }
+}
+
+@media (max-width: 640px) {
+  .action-button::before {
+    width: 36px;
+    height: 36px;
   }
 }
 
@@ -274,11 +310,19 @@
   line-height: 100%;
   font-weight: 700;
   color: var(--current-color);
+
+  @media (max-width: 640px) {
+    font-size: 85px;
+  }
 }
 
 .pomodoro__result {
   margin: 0;
   margin-bottom: 40px;
+
+  @media (max-width: 640px) {
+    margin-bottom: 20px;
+  }
 }
 
 .result {
@@ -286,6 +330,10 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
+
+  @media (max-width: 640px) {
+    gap: 12px;
+  }
 
   &::before {
     content: "";
@@ -295,6 +343,11 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+
+    @media (max-width: 640px) {
+      width: 45px;
+      height: 45px;
+    }
   }
 }
 
@@ -308,6 +361,11 @@
 .pomodoro__settings {
   display: grid;
   place-content: center;
+
+  @media (max-width: 640px) {
+    max-width: 100%;
+    max-height: 100%;
+  }
 
   &:not([open]) {
     display: none;
@@ -332,6 +390,11 @@
   text-align: center;
   background-color: var(--background-primary);
   box-shadow: 0 0 30px 0 var(--box-shadow);
+
+  @media (max-width: 640px) {
+    width: 320px;
+    padding: 28px 36px 20px;
+  }
 }
 
 .settings__close-button {
@@ -350,6 +413,13 @@
   transition: opacity 0.3s linear;
   cursor: pointer;
 
+  @media (max-width: 640px) {
+    top: 10px;
+    right: 10px;
+    width: 44px;
+    height: 44px;
+  }
+
   &:hover,
   &:focus,
   &:active {
@@ -361,18 +431,21 @@
   display: grid;
   justify-items: center;
   gap: 10px;
-}
 
-.settings__capture {
-  margin-bottom: 30px;
-  font-size: 20px;
-  font-weight: 700;
+  @media (max-width: 640px) {
+    gap: 15px;
+  }
 }
 
 .settings__label {
   font-size: 16px;
+  line-height: 100%;
   font-weight: 700;
   text-wrap: balance;
+
+  @media (max-width: 640px) {
+    font-size: 14px;
+  }
 }
 
 .settings__field {
@@ -389,6 +462,12 @@
   border-radius: 8px;
   box-shadow: 0 0 6px 0 var(--box-shadow);
 
+  @media (max-width: 640px) {
+    width: 100%;
+    margin: 0;
+    padding: 12px;
+  }
+
   &::placeholder {
     color: var(--text-dark-opacity);
   }
@@ -398,6 +477,11 @@
   width: 70%;
   color: var(--background-secondary);
   background-color: var(--pomodoro);
+
+  @media (max-width: 640px) {
+    width: 100%;
+    margin-top: 10px;
+  }
 
   &:hover,
   &:focus,
